--- a/style.css
+++ b/style.css
@@ -190,6 +190,10 @@ section h3{
     width: 40%;
 }
 
+form{
+    padding-bottom: 50px;
+}
+
 label{
     font-size: 20px;
     font-weight: 700;
@@ -209,7 +213,6 @@ input{
     align-items: center;
     margin: auto;
     width: 40%;
-
     margin-bottom: 40px;
 }
 
@@ -236,8 +239,11 @@ input{
     width: 40%;
 }
 
-
-
+#btn-form {
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+}
 
 /* Respansividade para telas menores*/
 
@@ -444,5 +450,41 @@ input{
     
     #card4{
         justify-content: center;
+    }
+
+    #infosHospital,
+    #checkBox,
+    #infosPessoais {
+        width: 90%;
+    }
+
+    input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    #titulo-cont3{
+        font-size: 30px;
+    }
+    
+    
+    form{
+        padding-bottom: 50px;
+    }
+    
+    label{
+        font-size: 15px;
+    }
+    
+    input{
+        font-size: 15px;
+    }    
+    
+    #checkBox p{
+        font-size: 15px;
+    }
+    
+    #checkBox label{
+        font-size: 15px;
     }
 }
